--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-icons": "^4.11.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.18.0",
+    "react-toastify": "^9.1.3",
     "sweetalert2": "^11.9.0"
   },
   "devDependencies": {
